# vue-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/vue-rs/: Cargo.toml
crates/vue-rs-build/: Cargo.toml
crates/vue-rs-build/src/: lib.rs
crates/vue-rs-build/tests/: compile.rs
crates/vue-rs-compiler/: Cargo.toml
crates/vue-rs-compiler/src/: codegen.rs  component.rs  lib.rs  parser.rs  props.rs  script.rs  sfc.rs  style.rs
crates/vue-rs-compiler/tests/: compile.rs  component.rs  props.rs  script.rs  sfc.rs  style.rs
crates/vue-rs-dom/: Cargo.toml
crates/vue-rs-dom/src/: attrs.rs  backend.rs  builder.rs  callback.rs  class.rs  element.rs  lib.rs  mock.rs  node_ref.rs  slots.rs  style.rs  web.rs
crates/vue-rs-dom/tests/: class.rs  control_flow.rs  fragment.rs  render.rs  slots.rs  style.rs
crates/vue-rs-macro/: Cargo.toml
crates/vue-rs-macro/src/: lib.rs
crates/vue-rs-macro/tests/: component.rs  component_v_model.rs  component_v_model_named.rs  context.rs  counter.rs  directives.rs  fragment.rs  lifecycle.rs  maybe_signal_props.rs  memo.rs  prop_defaults.rs  props.rs  reactive.rs  reactive_props.rs  ref_spelling.rs  slots.rs  style.rs  template_ref.rs  value_sugar.rs  watch_effect_spelling.rs  watch_spelling.rs
crates/vue-rs-macro/tests/fixtures/: badge.vrs  boxed.vrs  counter.vrs  counter_ref.vrs  counter_watch.vrs  counter_watch_effect.vrs  display.vrs  doubler.vrs  feed.vrs  field.vrs  greeter.vrs  input_ref.vrs  labeled.vrs  layout.vrs  multi_root.vrs  named_field.vrs  panel.vrs  provider.vrs  stepper.vrs  themed.vrs  widget.vrs
crates/vue-rs-reactive/: Cargo.toml
crates/vue-rs-reactive/src/: lib.rs  runtime.rs
crates/vue-rs-reactive/tests/: context_lifecycle.rs  effect_scope.rs  maybe_signal.rs  reactive.rs  reactivity.rs  read_signal.rs  scheduler.rs  scopes.rs  watch.rs  watch_flush.rs  writable_computed.rs
crates/vue-rs/src/: lib.rs
crates/vue-rs/tests/: facade.rs
examples/counter-web/: Cargo.toml  README.md  build.rs  index.html
examples/counter-web/src/: counter.vrs  lib.rs
examples/todo-web/: Cargo.toml  README.md  index.html
examples/todo-web/src/: lib.rs  todo_app.vrs
