[workspace]
resolver = "2"
members = [
    "crates/vue-rs-reactive",
    "crates/vue-rs-dom",
    "crates/vue-rs-compiler",
    "crates/vue-rs-macro",
    "crates/vue-rs-build",
]
# Browser demo is wasm-only (uses the `web` feature); keep it out of native
# workspace builds/tests. Build it with trunk or the wasm32 target directly.
exclude = ["examples/counter-web", "examples/todo-web"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ebibi/vue-rs"

[workspace.lints.clippy]
all = "warn"
