[package]
name = "vue-rs-build"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time compilation of vue-rs .vrs single-file components."

[dependencies]
vue-rs-compiler = { path = "../vue-rs-compiler" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

[lints]
workspace = true
