[package]
name = "vue-rs-compiler"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compiles vue-rs templates into Rust El-builder code."

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
