[package]
name = "counter-web"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vue-rs-reactive = { path = "../../crates/vue-rs-reactive" }
vue-rs-dom = { path = "../../crates/vue-rs-dom", features = ["web"] }
wasm-bindgen = "0.2"

[build-dependencies]
vue-rs-build = { path = "../../crates/vue-rs-build" }
